--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 }
 </style>
     <meta charset="UTF-8">
-    <title>boletos</title>
+    <title>costAlameda</title>
     <meta name="Propedéutico" content="apuntes de matemáticas"/>
     <meta name="Author" content="Héctor René Becerril Cejudo"/>
     <meta name="keywords" content="matemáticas"/>
@@ -73,12 +73,12 @@
 
 <body>
     <h1>
-        <div style="font-size:30px;color:white;
+        <div style="font-size:45px;color:white;
         line-height:30px;padding-bottom:5px;">
-            &ensp;My class
+            <br>&ensp;My class
             <br>
         </div>
-        <text style="font-size:30px;padding-left:10px; color:grey;">
+        <text style="font-size:35px;padding-left:10px; color:grey;">
             &emsp;Matemáticas</text>
     </h1>
     
