--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
             <br>&ensp;My class
             <br>
         </div>
-        <text style="font-size:35px;padding-left:10px; color:grey;">
+        <text style="font-size:35px;padding-left:10px; color:#7D7C7D;">
             &emsp;Matemáticas</text>
     </h1>
     
     <h2>
-    <p style ="font-family:tahoma;color:grey;font-size:16px;">
+    <p style ="font-family:tahoma;color:#7D7C7D;font-size:16px;">
                 by @Renebec
             </p>
     </h2>
