--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 }
 </style>
     <meta charset="UTF-8">
-    <title>costAlameda</title>
+    <title>invAlameda</title>
     <meta name="Propedéutico" content="apuntes de matemáticas"/>
     <meta name="Author" content="Héctor René Becerril Cejudo"/>
     <meta name="keywords" content="matemáticas"/>
